--- a/package.json
+++ b/package.json
@@ -9,9 +9,15 @@
   },
   "dependencies": {
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
+    "ethers": "^6.7.1",
+    "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "vuex": "^4.1.0",
+    "web3": "^4.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
