--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "socket.io-client": "^4.7.2",
     "vue": "^3.3.4",
     "vue-router": "^4.2.5",
+    "vuedraggable": "^2.24.3",
     "vuex": "^4.1.0",
     "web3": "^4.1.2"
   },
