--- a/nginx.conf
+++ b/nginx.conf
@@ -14,17 +14,38 @@ http {
   access_log  /var/log/nginx/access.log  main;
   sendfile        on;
   keepalive_timeout  65;
+
   server {
-    listen       80;
-    server_name  localhost;
+    listen 80;
+    server_name azi-online.com;
+    location / {
+      return 301 https://$host$request_uri;
+    }
+  }
+
+  server {
+    listen       443 ssl;
+    server_name azi-online.com;
+    ssl_certificate /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;
     location / {
       root   /app;
       index  index.html;
       try_files $uri $uri/ /index.html;
     }
+    
+    location /API/ {
+        proxy_pass http://127.0.0.1:5000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
     error_page   500 502 503 504  /50x.html;
     location = /50x.html {
       root   /usr/share/nginx/html;
     }
+
   }
 }
